[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/gui_root.gd" type="Script" id=1]
[ext_resource path="res://arts/icons.png" type="Texture" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://assets/tool_settings_panel/tool_settings_panel.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/main_viewport/main_viewport.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/main_color_selector/main_color_selector.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/tool_selector/tool_selector.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/menu_bar/menu_bar.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/global_dialogs/open_png_dialog.gd" type="Script" id=9]
[ext_resource path="res://assets/global_dialogs/export_png_dialog.gd" type="Script" id=10]
[ext_resource path="res://assets/layer_dropdown/layer_dropdown.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/global_dialogs/save_skin_dialog.gd" type="Script" id=12]
[ext_resource path="res://assets/global_dialogs/open_skin_dialog.gd" type="Script" id=13]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 3.0
content_margin_right = 3.0
content_margin_top = 3.0
content_margin_bottom = 3.0
bg_color = Color( 0.247059, 0.239216, 0.278431, 1 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 1, 1, 6, 7 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 13, 1, 6, 7 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 7, 1, 6, 7 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 25, 1, 6, 7 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 19, 1, 6, 7 )

[node name="GUIRoot" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 3.0
margin_top = 3.0
margin_right = 957.0
margin_bottom = 537.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBar" parent="VBox" instance=ExtResource( 8 )]

[node name="ConvenientBar" type="HBoxContainer" parent="VBox"]
margin_top = 24.0
margin_right = 954.0
margin_bottom = 48.0

[node name="ButtonNew" type="TextureButton" parent="VBox/ConvenientBar"]
margin_right = 20.0
margin_bottom = 24.0
rect_min_size = Vector2( 20, 20 )
texture_normal = SubResource( 2 )
expand = true
stretch_mode = 5

[node name="ButtonOpen" type="TextureButton" parent="VBox/ConvenientBar"]
margin_left = 24.0
margin_right = 44.0
margin_bottom = 24.0
rect_min_size = Vector2( 20, 20 )
texture_normal = SubResource( 3 )
expand = true
stretch_mode = 5

[node name="ButtonSave" type="TextureButton" parent="VBox/ConvenientBar"]
margin_left = 48.0
margin_right = 68.0
margin_bottom = 24.0
rect_min_size = Vector2( 20, 20 )
texture_normal = SubResource( 4 )
expand = true
stretch_mode = 5

[node name="ButtonUndo" type="TextureButton" parent="VBox/ConvenientBar"]
margin_left = 72.0
margin_right = 92.0
margin_bottom = 24.0
rect_min_size = Vector2( 20, 20 )
texture_normal = SubResource( 5 )
expand = true
stretch_mode = 5

[node name="ButtonRedo" type="TextureButton" parent="VBox/ConvenientBar"]
margin_left = 96.0
margin_right = 116.0
margin_bottom = 24.0
rect_min_size = Vector2( 20, 20 )
texture_normal = SubResource( 6 )
expand = true
stretch_mode = 5

[node name="VSeparator" type="VSeparator" parent="VBox/ConvenientBar"]
margin_left = 120.0
margin_right = 124.0
margin_bottom = 24.0

[node name="ToolSelectButton" type="Button" parent="VBox/ConvenientBar"]
margin_left = 128.0
margin_right = 188.0
margin_bottom = 24.0
rect_min_size = Vector2( 60, 0 )
text = "Tool"
icon = ExtResource( 3 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToolShapeButton" type="OptionButton" parent="VBox/ConvenientBar"]
margin_left = 192.0
margin_right = 259.0
margin_bottom = 24.0
text = "Shape"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox" type="SpinBox" parent="VBox/ConvenientBar"]
margin_left = 263.0
margin_right = 337.0
margin_bottom = 24.0
max_value = 16.0
align = 1
prefix = "Size:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="VBox/ConvenientBar"]
margin_left = 341.0
margin_right = 441.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 1
max_value = 16.0
tick_count = 17
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBox/ConvenientBar/HSlider"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Brush Size"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CustomValue" type="HBoxContainer" parent="VBox/ConvenientBar"]
margin_left = 445.0
margin_right = 595.0
margin_bottom = 24.0
rect_min_size = Vector2( 150, 0 )
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="VBox/ConvenientBar/CustomValue"]
margin_right = 135.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 16.0
step = 1.0
value = 5.0
percent_visible = false

[node name="Label" type="Label" parent="VBox/ConvenientBar/CustomValue/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Brush Size: 5"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinButton" type="TextureRect" parent="VBox/ConvenientBar/CustomValue"]
margin_left = 135.0
margin_right = 150.0
margin_bottom = 24.0
rect_min_size = Vector2( 15, 0 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Space" type="Control" parent="VBox/ConvenientBar"]
margin_left = 599.0
margin_right = 749.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBox/ConvenientBar"]
margin_left = 753.0
margin_top = 5.0
margin_right = 835.0
margin_bottom = 19.0
text = "Active Layer:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LayerDropdown" parent="VBox/ConvenientBar" instance=ExtResource( 11 )]
margin_left = 839.0
margin_right = 954.0
items = [ "LayerChooser", null, false, 0, null ]

[node name="MainSplit" type="HSplitContainer" parent="VBox"]
margin_top = 52.0
margin_right = 954.0
margin_bottom = 534.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 196
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsSplit" type="VSplitContainer" parent="VBox/MainSplit"]
margin_right = 310.0
margin_bottom = 482.0
split_offset = 40

[node name="ColorSelector" parent="VBox/MainSplit/SettingsSplit" instance=ExtResource( 6 )]
margin_right = 310.0
margin_bottom = 274.0

[node name="ToolSplit" type="VSplitContainer" parent="VBox/MainSplit/SettingsSplit"]
margin_top = 286.0
margin_right = 310.0
margin_bottom = 482.0
split_offset = 70

[node name="ToolSelector" parent="VBox/MainSplit/SettingsSplit/ToolSplit" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 310.0
margin_bottom = 108.0

[node name="ToolSettingsPanel" parent="VBox/MainSplit/SettingsSplit/ToolSplit" instance=ExtResource( 4 )]
margin_top = 120.0
margin_right = 310.0
margin_bottom = 196.0

[node name="MainViewport" parent="VBox/MainSplit" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 322.0
margin_right = 954.0
margin_bottom = 482.0

[node name="GlobalDialogs" type="Control" parent="."]
margin_left = 3.0
margin_top = 3.0
margin_right = 957.0
margin_bottom = 537.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="NewDocumentDialog" type="WindowDialog" parent="GlobalDialogs"]
margin_left = 285.0
margin_top = 98.0
margin_right = 692.0
margin_bottom = 431.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="GlobalDialogs/NewDocumentDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="GlobalDialogs/NewDocumentDialog/VBox"]
margin_right = 377.0
margin_bottom = 14.0
text = "New Skin"
align = 1

[node name="GBox" type="GridContainer" parent="GlobalDialogs/NewDocumentDialog/VBox"]
margin_top = 24.0
margin_right = 377.0
margin_bottom = 273.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label1" type="Label" parent="GlobalDialogs/NewDocumentDialog/VBox/GBox"]
margin_top = 3.0
margin_right = 68.0
margin_bottom = 17.0
text = "Skin type:"

[node name="OptionSkinType" type="OptionButton" parent="GlobalDialogs/NewDocumentDialog/VBox/GBox"]
margin_left = 72.0
margin_right = 377.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Steve"
items = [ "Steve", null, false, 0, null, "Alex", null, false, 1, null ]
selected = 0

[node name="Label2" type="Label" parent="GlobalDialogs/NewDocumentDialog/VBox/GBox"]
margin_top = 27.0
margin_right = 68.0
margin_bottom = 41.0
text = "Resolution"

[node name="OptionResolution" type="OptionButton" parent="GlobalDialogs/NewDocumentDialog/VBox/GBox"]
margin_left = 72.0
margin_top = 24.0
margin_right = 377.0
margin_bottom = 44.0
text = "64x64"
items = [ "64x64", null, false, 0, null, "128x128", null, false, 1, null, "256x256", null, false, 2, null ]
selected = 0

[node name="HBox" type="HBoxContainer" parent="GlobalDialogs/NewDocumentDialog/VBox"]
margin_top = 283.0
margin_right = 377.0
margin_bottom = 303.0
size_flags_horizontal = 5
custom_constants/separation = 10

[node name="ButtonCreate" type="Button" parent="GlobalDialogs/NewDocumentDialog/VBox/HBox"]
margin_right = 183.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Create"

[node name="ButtonCancel" type="Button" parent="GlobalDialogs/NewDocumentDialog/VBox/HBox"]
margin_left = 193.0
margin_right = 377.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Cancel"

[node name="ImportPNGDialog" type="FileDialog" parent="GlobalDialogs"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -208.0
margin_top = -144.0
margin_right = 208.0
margin_bottom = 144.0
rect_min_size = Vector2( 250, 87.5 )
window_title = "Open File(s)"
resizable = true
mode = 1
access = 2
filters = PoolStringArray( "*.png; PNG Files" )
show_hidden_files = true
script = ExtResource( 9 )

[node name="OpenSkinDialog" type="FileDialog" parent="GlobalDialogs"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -208.0
margin_top = -144.0
margin_right = 208.0
margin_bottom = 144.0
rect_min_size = Vector2( 250, 87.5 )
window_title = "Open a File"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.bs2; BetterSkin2 Skin Files" )
show_hidden_files = true
script = ExtResource( 13 )

[node name="ExportPNGDialog" type="FileDialog" parent="GlobalDialogs"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -222.5
margin_top = -152.0
margin_right = 222.5
margin_bottom = 152.0
rect_min_size = Vector2( 250, 87.5 )
window_title = "Export Skin"
resizable = true
access = 2
filters = PoolStringArray( "*.png; PNG Files" )
show_hidden_files = true
script = ExtResource( 10 )

[node name="SaveSkinDialog" type="FileDialog" parent="GlobalDialogs"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -222.5
margin_top = -152.0
margin_right = 222.5
margin_bottom = 152.0
rect_min_size = Vector2( 250, 87.5 )
resizable = true
access = 2
filters = PoolStringArray( "*.bs2; BetterSkin2 Skin Files" )
show_hidden_files = true
script = ExtResource( 12 )

[node name="PreferencesDialog" type="WindowDialog" parent="GlobalDialogs"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -288.0
margin_top = -206.0
margin_right = 288.0
margin_bottom = 206.0

[connection signal="pressed" from="VBox/ConvenientBar/ButtonNew" to="." method="_on_ButtonNew_pressed"]
[connection signal="pressed" from="VBox/ConvenientBar/ButtonOpen" to="." method="_on_ButtonOpen_pressed"]
[connection signal="pressed" from="VBox/ConvenientBar/ButtonSave" to="." method="_on_ButtonSave_pressed"]
[connection signal="files_selected" from="GlobalDialogs/ImportPNGDialog" to="GlobalDialogs/ImportPNGDialog" method="_on_OpenPNGDialog_files_selected"]
[connection signal="file_selected" from="GlobalDialogs/OpenSkinDialog" to="GlobalDialogs/OpenSkinDialog" method="_on_OpenSkinDialog_file_selected"]
[connection signal="file_selected" from="GlobalDialogs/ExportPNGDialog" to="GlobalDialogs/ExportPNGDialog" method="_on_ExportPNGDialog_file_selected"]
[connection signal="file_selected" from="GlobalDialogs/SaveSkinDialog" to="GlobalDialogs/SaveSkinDialog" method="_on_SaveSkinDialog_file_selected"]
